@@ -5,7 +5,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <app.version>3.1</app.version>
+    <app.version>3.3</app.version>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
